addd experience and fix bugs

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link id='favicon' rel="shortcut icon" href="./assets/images/favicon.png" type="image/x-png">
     <title>Portfolio | Fikri Fauzi</title>
 </head>
-<body oncontextmenu="return false">
+<!-- <body oncontextmenu="return false"> -->
 
 <!-- pre loader -->
 <!-- <div class="loader-container">
@@ -191,6 +191,18 @@
 
   <div class="timeline">
 
+    <div class="container right">
+      <div class="content">
+        <div class="tag">
+          <h2>Internship Trainee at Advanced Software Laboratory</h2>
+        </div>
+        <div class="desc">
+            <h3>Advanced Sofware Engineer Lab</h3>
+            <p>June 2023 - August 2023</p>
+        </div>
+      </div>
+    </div>
+
     <div class="container left">
       <div class="content">
         <div class="tag">
@@ -229,13 +241,10 @@
   </div>
 
   <!-- <div class="morebtn">
-    <a href="/experience" class="btn"><span>View All</span>
-      <i class="fas fa-arrow-right"></i>
-  </a>
+      <a href="/experience" class="btn"><span>View All</span>
+        <i class="fas fa-arrow-right"></i>
+    </a>
   </div> -->
-
-</div>
-
 </section>
 <!-- experience section ends -->
 
