--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
           <h3>contact info</h3>
           <p> <i class="fas fa-phone"></i>+628989760894</p>
           <p> <i class="fas fa-envelope"></i>fikri36987@gmail.com</p>
-          <p> <i class="fas fa-map-marked-alt"></i>Bandung, West Java, Indoensia</p>
+          <p> <i class="fas fa-map-marked-alt"></i>Bandung, West Java, Indonesia</p>
           <div class="share">
 
               <a class="linkedin" aria-label="LinkedIn" href="https://www.linkedin.com/in/fikri-fauzi-a08588258/" target="_blank"><i class="fab fa-linkedin"></i></a>
