--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link id='favicon' rel="shortcut icon" href="./assets/images/favicon.png" type="image/x-png">
     <title>Portfolio | Fikri Fauzi</title>
 </head>
-<!-- <body oncontextmenu="return false"> -->
+<body oncontextmenu="return false">
 
 <!-- pre loader -->
 <!-- <div class="loader-container">
