--- a/index.html
+++ b/index.html
@@ -218,10 +218,10 @@
     <div class="container right">
         <div class="content">
           <div class="tag">
-            <h2>Internship</h2>
+            <h2>Full-Stack Developer Intern</h2>
           </div>
           <div class="desc">
-              <h3>Full-Stack Developer</h3>
+              <h3>Communication and Informatics Service Department of Kebumen City</h3>
               <p>June 2025 - August 2025</p>
           </div>
         </div>
@@ -230,10 +230,10 @@
     <div class="container left">
       <div class="content">
         <div class="tag">
-          <h2>Project Programmer</h2>
+          <h2>Web Programmer</h2>
         </div>
         <div class="desc">
-            <h3>Web Developer</h3>
+            <h3>Telkom University</h3>
             <p>October 2025 - Desember 2025</p>
         </div>
       </div>
