update cv and color tone

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </div>
         
         <div class="resumebtn">
-          <a href="/assets/cv/fikri_cv.pdf" 
+          <a href="/assets/cv/fikri_cv - ver 2.pdf" 
             download="Fikri_Fauzi_CV.pdf" 
             class="btn">
               <span>Download CV</span>
@@ -142,7 +142,7 @@
         <div class="content">
         <h3>Bachelor of Computer Science</h3>
         <p>Telkom University | Faculty of Informatics</p>
-        <h4>2022-2025 | Uo.Graduated</h4>
+        <h4>2022-2025 | Unofficial Graduated</h4>
         </div>
     </div>
 </div>
